@@ -2,7 +2,6 @@ package com.nhnacademy.front.shop.controller;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.nhnacademy.front.shop.author.client.AuthorClient;
 import com.nhnacademy.front.shop.book.dto.AdminBookResponse;
 import com.nhnacademy.front.shop.book.dto.BookAuthorDto;
 import com.nhnacademy.front.shop.book.dto.BookCreateForm;
@@ -13,7 +12,6 @@ import com.nhnacademy.front.shop.book.dto.BookUpdateForm;
 import com.nhnacademy.front.shop.book.dto.BookUpdateRequest;
 import com.nhnacademy.front.shop.book.dto.BookCreateRequest;
 import com.nhnacademy.front.shop.book.dto.SortType;
-import com.nhnacademy.front.shop.category.client.CategoryClient;
 import com.nhnacademy.front.shop.category.client.dto.CategoryFlatDto;
 import com.nhnacademy.front.shop.category.client.dto.CategoryTreeDto;
 import com.nhnacademy.front.shop.category.service.CategoryService;
@@ -25,8 +23,6 @@ import com.nhnacademy.front.shop.coupon.store.client.dto.CouponIssueRequest;
 import com.nhnacademy.front.shop.coupon.store.client.dto.StoresResponse;
 import com.nhnacademy.front.shop.like.client.dto.LikeResponse;
 import com.nhnacademy.front.shop.like.service.LikeService;
-import com.nhnacademy.front.shop.publisher.client.PublisherClient;
-import com.nhnacademy.front.shop.tag.client.TagClient;
 
 import feign.FeignException;
 import jakarta.validation.Valid;
@@ -38,12 +34,10 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.springframework.http.MediaType;
 import java.util.Map;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.CookieValue;
@@ -66,11 +60,11 @@ import com.nhnacademy.front.util.PageUtil;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
 
 @Slf4j
 @RequiredArgsConstructor
-@Controller
+@RestController
 public class BookController {
     private final BookClient bookClient;
     private final ReviewClient reviewClient;
@@ -270,7 +264,7 @@ public class BookController {
         List<Long> selectedCategoryIds = response.data().categories().stream()
                 .map(List::getLast)
                 .map(CategoryFlatDto::id)
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("book", response.data());
         model.addAttribute("categories", categories);
@@ -381,7 +375,6 @@ public class BookController {
     }
 
     @DeleteMapping("/admin/books/{bookId}")
-    @ResponseBody
     public ResponseEntity<Void> deleteBook(@PathVariable Long bookId) {
         bookClient.deleteBook(bookId);
         return ResponseEntity.ok().build();
